public/styles/menu.css
.dropdown {

    margin: 10em 5em 5em 12em;}

.delete-btn {
  float: right;
}

#add {
  margin-top: 5px;
}

#category {
  flex-grow: 0;
  margin: 1em 1em 1em 2em;
}

.side {
  /*margin-top: -1.5em;*/
 height: 1em;
}

.foodpic {
  margin-left: 5em;
}

.mainFood {
   /*margin-top: -1.5em;*/
 height: 1em;
}

#orderdetail {
      position: fixed;
    /*text-align: center;*/
    width: 60%;
}

div #menuitems {
  height:200px;
  width: 500px;
}

div .card {
  height:auto;
  width: 500px;
}

div .col {
  flex-grow: 0;
}

#cart{
  position: fixed;
  bottom: 0;
  right: 0;
  height: 250px;
  width: 400px;
  padding-bottom: 55em;
}

li {
  margin-right: 0;
  width: 250px;
}

/*#side {
  float: right;
}*/

